# web4.o.0

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
docs/: architecture-overview.md  manifesto.md  methodology.md  principles.md  (+1 more)
implementations/sac_rs/: Cargo.toml
implementations/sac_rs/src/: lib.rs  main.rs  sac.rs
implementations/sac_rs/tests/: cli_smoke_test.rs  integration_test.rs
implementations/ulp_atom_kernel/: Cargo.toml
implementations/ulp_atom_kernel/examples/: remote_nodes.json  sample_kv.json  sample_nodes.json  sample_request.json  sample_request_decode.json  sample_shard_manifest.json  two_stage_request.json
implementations/ulp_atom_kernel/src/: adapter.rs  atom.rs  capacity.rs  client.rs  exec.rs  federation_bridge.rs  kernel.rs  kv.rs  lib.rs  link.rs  loader.rs  main.rs  object_store.rs  pipeline.rs  prib.rs  protocol.rs  remote.rs  router.rs  runner.rs  runtime.rs  sac_bridge.rs  server.rs  shadow.rs  shard.rs  sovereignty.rs  validation.rs
implementations/ulp_atom_kernel/src/backend/: config.rs  cuda.rs  cuda_util.rs  http.rs  mock.rs  mod.rs  selector.rs  trait.rs  vulkan.rs  vulkan_util.rs
implementations/ulp_atom_kernel/tests/: adapter_lineage_test.rs  federated_selection.rs  handoff_verification.rs  integration.rs  link_cost_test.rs  ownership_provenance.rs  remote_sovereignty.rs  router_cost_test.rs  shadow_eval_test.rs  stage_receipt_lineage_test.rs  stage_receipt_verification.rs  transport_integration_test.rs  validation_result_test.rs  verification_chain.rs
(+77 files in other folders)
