[package]
name = "sac_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
pbkdf2 = "0.12"
rpassword = "7.3"

[dev-dependencies]
tempfile = "3.10"
jsonschema = "0.45"
